src/test/compile-fail/extfmt-no-args.rs
// xfail-stage0
// error-pattern:format string

fn main() {
  #fmt();
}
